# ActiveLearningPipelines

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ALPScenario.py  CHANGELOG.md  CNAME  MANIFEST.in  Makefile  README.md  index.html  minimal_example.py  pipeline.py  pyproject.toml  req.txt  req_full.txt  req_small.txt  requirements.txt  requirements_full.txt  sampling_strategy.py  setup.py  small_tests.ipynb  test.py  uncertainty_quantifier.py
.github/workflows/: coverage.yml  docs.yml  pytest.yml  unit-tests.yml
ALP/: __init__.py  common.py  ensemble_constructor.py  main.py  pipeline.py
ALP/benchmark/: ActiveLearningScenario.py  ActiveLearningSetting.py  BenchmarkConnector.py  BenchmarkSuite.py  Evaluator.py  Observer.py  Oracle.py  Scenario.py  Setting.py  __init__.py
ALP/experimenter/: experimenter.py
ALP/pipeline/: ALPEvaluator.py  ALTEvaluator.py  ActiveLearningPipeline.py  Initializer.py  Labeler.py  Oracle.py  QueryStrategy.py  SALTEvaluator.py  SamplingStrategy.py  SemiSupervisedLearningPipeline.py  __init__.py
ALP/util/: TorchUtil.py  __init__.py  common.py  ensemble_constructor.py  transformer.py  (+1 more)
_templates/: .pre-commit-config.yaml
alpbench/: __init__.py
alpbench/benchmark/: Observer.py  (+3 more)
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
docs/: api.rst  conf.py  requirements.txt
examples/: README.rst  al-custom-usage-example.py  al-database-minimal-example.py  al-filebased-minimal-example.py  custom-usage-example.py  database-minimal-example.py  filebased-minimal-example.py  minimal-example.py  sl-custom-usage-example.py
setting_dataset_ids/: kickout_large.npy  kickout_medium.npy  kickout_small.npy  take_large.npy  take_medium.npy  take_small.npy
tests/: conftest.py  test_activelearningpipelines.py  test_activelearningscenario.py  test_activelearningsetting.py  test_alpevaluator.py  test_benchmark_suite.py  test_common.py  test_datafile_benchmark_connector.py  test_ensemble_constructor.py  test_experiment_runner.py  test_initializer.py  test_myfile.py  test_observer.py  test_oracle.py  test_querystrategy.py  test_setting.py  test_tabnet.py  test_tabpfn.py  test_testperformanceobserver.py
(+92 files in other folders)
